Update to RPGL v0.18.0-alpha.
Update slash commands.

Added /list command.